# reference-to-rig

./: .gitignore  CONTRIBUTING.md  Makefile  README.md
capture_library/: metadata.json
capture_library/cab_irs/: .gitkeep
capture_library/nam_models/: .gitkeep
docs/: add_captures.md  api.md  matching.md
engine/: .pre-commit-config.yaml  env.example  pyproject.toml  requirements.txt
engine/app/: __init__.py  config.py  main.py  models.py
engine/app/api/: projects.py
engine/app/features/: __init__.py  acoustic_features.py  audio_utils.py  extractor.py
engine/app/isolation/: __init__.py  adapter.py
engine/app/observability/: __init__.py  logging.py
engine/app/optimization/: __init__.py  eq_optimizer.py
engine/app/rendering/: __init__.py  nam_adapter.py  renderer.py
engine/app/retrieval/: __init__.py  acoustic_search.py  search.py
engine/app/storage/: __init__.py  database.py  project_manager.py
engine/app/tasks/: __init__.py  isolation_task.py  matching_task.py  queue.py
engine/capture_library/: metadata.json
engine/capture_library/nam_models/: .gitignore
engine/capture_library/probes/: .gitkeep  README.md
engine/scripts/: __init__.py  build_index.py  build_probe_index.py  generate_metadata.py  test_sam_audio.py
engine/tests/: __init__.py  conftest.py  test_features.py  test_isolation.py  test_retrieval.py  test_sam_audio.py
plugin/: CMakeLists.txt  setup_juce.bat
plugin/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugin/src/api/: EngineClient.cpp  EngineClient.h
plugin/src/components/: AudioPlayerComponent.cpp  AudioPlayerComponent.h  EQVisualizerComponent.cpp  EQVisualizerComponent.h  FileDropComponent.cpp  FileDropComponent.h  ProgressComponent.cpp  ProgressComponent.h  ProjectListComponent.cpp  ProjectListComponent.h  ResultsComponent.cpp  ResultsComponent.h
plugin/src/utils/: AsyncTaskRunner.cpp  AsyncTaskRunner.h
scripts/: setup.bat  setup.sh
ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/src/: App.tsx  main.tsx
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/icons/: .gitkeep
ui/src/api/: client.ts
ui/src/components/: AudioTrimmer.tsx  Layout.tsx
ui/src/pages/: MatchingPage.tsx  ProjectPage.tsx  ProjectsPage.tsx  ResultsPage.tsx
ui/src/store/: useStore.ts
ui/src/styles/: globals.css
